# llm-sandbox

./: .bandit  .gitignore  .pre-commit-config.yaml  .sonarignore  404.html  ARCHITECTURE_REDESIGN.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRUSH.md  Dockerfile  HYPERLIGHT_IMPLEMENTATION.md  KUBERNETES_POOL_IMPROVEMENTS.md  LICENSE  Makefile  POOL_REVIEW_SUMMARY.md  README.md  TEST_IMPROVEMENT_RECOMMENDATIONS.md  codecov.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  ruff.toml  sitemap.xml  sonar-project.properties  test_fix.py  test_r_issue.py  tox.ini
.github/: FUNDING.yml  copilot-instructions.md  labeler.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: codescan.yml  docker-publish.yml  main.yml  on-release-main.yml  pylint.yaml  unittest.yaml  validate-codecov-config.yml
api-reference/: index.html
backends/: index.html
configuration/: index.html
container-pooling/: index.html
contributing/: index.html
custom-images/: index.html
docker/: go123.Dockerfile  java11.Dockerfile  node22.Dockerfile  python311.Dockerfile
dockers/: cpp11.Dockerfile  go123.Dockerfile  java11.Dockerfile  node22.Dockerfile  python311.Dockerfile  r434.Dockerfile  r451.Dockerfile  ruby302.Dockerfile
docs/: api-reference.md  artifact-extraction.md  backends.md  configuration.md  container-pooling.md  contributing.md  custom-images.md  examples.md  existing-container-support.md  extending-artifact-extraction.md  getting-started.md  hyperlight-backend.md  index.md  integrations.md  interactive-sessions.md  languages.md  mcp-integration.md  modules.md  security-guide.md  security.md  tutorials.md
docs/stylesheets/: extra.css
example/: code_runner.py
examples/: __init__.py  advanced_security_scenarios.py  async_example.py  code_runner.py  code_runner_docker.py  code_runner_firecracker.py  code_runner_k8s.py  code_runner_micromamba.py  code_runner_podman.py  container_user_privilege.py  copy_demo.py  debug_exit_codes.py  debug_permissions.py  debug_pip_issue.py  debug_simple.py  existing_container_demo.py  hyperlight_example.py  index.html  interactive_session_demo.py  interactive_session_kubernetes.py  interactive_session_podman.py  k8s_readonly_file_system.py  kubernetes_pod_pool_example.py  langchain_tool.py  langgraph_tool.py  llamaindex_tool.py  optimized_kubernetes_pool_example.py  plot_clearing_example.py  pool_artifact_demo.py  pool_basic_demo.py  pool_concurrent_demo.py  pool_kubernetes_demo.py  pool_monitoring_demo.py  python_artifact.py  python_interactive.py  python_simple_artifact.py  r_artifact_demo.py  r_plot_clearing_example.py  r_simple_computing_demo.py  r_simple_demo.py  (+18 more)
existing-container-support/: index.html
getting-started/: index.html
integrations/: index.html
interactive-sessions/: index.html
javascripts/: mathjax.js
languages/: index.html
llm_sandbox/: __init__.py  artifact.py  base.py  const.py  data.py  docker.py  exceptions.py  factory.py  firecracker.py  hyperlight.py  interactive.py  k8s_utils.py  kubernetes.py  kubernetes_pool.py  kubernetes_pool_optimized.py  manager.py  micromamba.py  monitoring.py  podman.py  runtime_profiles.py  security.py  security_presets.py  session.py  utils.py
llm_sandbox/core/: __init__.py  config.py  mixins.py  session_base.py
llm_sandbox/language_handlers/: __init__.py  base.py  cpp_handler.py  factory.py  go_handler.py  java_handler.py  javascript_handler.py  python_handler.py  r_handler.py  ruby_handler.py  runtime_context.py
llm_sandbox/language_handlers/artifact_detection/: __init__.py  python_plot_detection.py  r_plot_detection.py
llm_sandbox/mcp_server/: __init__.py  const.py  server.py  types.py
llm_sandbox/pool/: __init__.py  base.py  config.py  docker_pool.py  exceptions.py  factory.py  kubernetes_pool.py  podman_pool.py  session.py
llm_sandbox/security/: __init__.py  package_validators.py
mcp-integration/: index.html
scripts/: publish-r-image.sh
search/: search_index.json
security/: index.html
tests/: __init__.py  conftest.py  requirements-test.txt  test.Dockerfile  test_advanced_security_scenarios.py  test_backend.py  test_base.py  test_base_handler.py  test_base_session_simple.py  test_const.py  test_cpp_handler.py  test_custom_image_libraries.py  test_data.py  test_data_missing.py  test_docker.py  test_dynamic_paths.py  test_encoding_errors.py  test_enforced_security_policy.py  test_exceptions.py  test_factory.py  test_firecracker.py  test_go_handler.py  test_hyperlight.py  test_interactive_session.py  test_java_handler.py  test_javascript_handler.py  test_jupyter_client.py  test_k8s_utils.py  test_kubernetes.py  test_kubernetes_pool.py  test_language_handler_factory.py  test_language_handlers.py  test_lazy_imports.py  test_libraries_param.py  test_mcp_server.py  test_micromamba.py  test_mixins.py  test_monitoring.py  test_package_validators.py  test_plot_clearing.py  (+32 more)
tests/integration/: test_session_integration.py
tests/performance/: test_session_performance.py
tests/security/: test_session_security.py
tests/stress/: test_session_stress.py
tests/unit/: test_session_unit.py
